--- a/math154/sequences_and_series.html
+++ b/math154/sequences_and_series.html
@@ -41,7 +41,7 @@ def _(N = slider(1,100,1), f = input_box(default = "1/(n^2)", type = str)):
   func = sage_eval(f, locals={'n':n})
   ssum = 0
   for q in [1..N]:
-    ssum = ssum + func(n)
+    ssum = ssum + func(q)
   print "Series Approximation: " + str(ssum)
 </script></div>
 
