--- a/math154/sequences_and_series.html
+++ b/math154/sequences_and_series.html
@@ -40,6 +40,8 @@
  <li>$$\sum_{n=1}^{\infty} \frac{\ln(1 + 1/n)}{n}$$
  <li>$$\sum_{n=1}^{\infty} \frac{1}{4^n - 3^n}$$
  <li>$$\sum_{n=1}^{\infty} \frac{1}{n^{1+1/n}}$$
+ <li>$$\sum_{n=1}^{\infty} ne^{-n}$$
+ <li>$$\sum_{n=1}^{\infty} \cos\left( \frac{n^2 + 3}{3n^5 + 2n^2 - \pi} \right)$$
 </ol>
 
 <div class="compute"><script type="text/x-sage">
