--- a/math154/sequences_and_series.html
+++ b/math154/sequences_and_series.html
@@ -40,8 +40,6 @@
  <li>$$\sum_{n=1}^{\infty} \frac{\ln(1 + 1/n)}{n}$$
  <li>$$\sum_{n=1}^{\infty} \frac{1}{4^n - 3^n}$$
  <li>$$\sum_{n=1}^{\infty} \frac{1}{n^{1+1/n}}$$
- <li>$$\sum_{n=1}^{\infty} ne^{-n}$$
- <li>$$\sum_{n=1}^{\infty} \cos\left( \frac{n^2 + 3}{3n^5 + 2n^2 - \pi} \right)$$
 </ol>
 
 <div class="compute"><script type="text/x-sage">
@@ -50,7 +48,7 @@ var('n')
 @interact
 def _(N = slider(1,100,1), f = input_box(default = "1/(n^2)", type = str)):
   func = sage_eval(f, locals={'n':n})
-  ssum = 0.0
+  ssum = 0
   for q in [1..N]:
     ssum = ssum + func(n=q)
   print "Series Approximation: " + str(ssum)
@@ -59,6 +57,27 @@ def _(N = slider(1,100,1), f = input_box(default = "1/(n^2)", type = str)):
 
 
   </div>
+
+
+  <h2>Example 1-X </h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1x">Example 1-X</button>
+    <div id="ex1x" class="collapse">
+      <img src="./1xrobots.png" width=300><br>
+
+      <P>Determine if each of the series below converges. State the test you use.
+
+  <ol type='A'>
+   <li>$$\sum_{n=1}^{\infty} \frac{10^n}{n!}$$
+   <li>$$\sum_{n=1}^{\infty} \frac{n^8}{8^n}$$
+   <li>$$\sum_{n=1}^{\infty} \frac{(2n)!)}{2^n(n!)^2}$$
+   <li>$$\sum_{n=1}^{\infty} n!e^{-6n}$$
+   <li>$$\sum_{n=1}^{\infty} \cos\left(\frac{4n^2 + 5}{n^3 + 2}\right)$$
+   <li>$$\sum_{n=1}^{\infty} \frac{(n!)^n}{(n^n)^{10}}$$
+   <li>$$\sum_{n=1}^{\infty} \left(\frac{10n^{1/n} - 1}{5n^{1/n} - 1}\right)^n$$
+   <li>$$\sum_{n=1}^{\infty} \frac{(3n^{1/3}}{6n^{4/3}+3}$$
+  </ol>
+
+    </div>
 
 <h2>Example 2 - Kempner</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example 2</button>
