--- a/math154/sequences_and_series.html
+++ b/math154/sequences_and_series.html
@@ -69,12 +69,12 @@ def _(N = slider(1,100,1), f = input_box(default = "1/(n^2)", type = str)):
   <ol type='A'>
    <li>$$\sum_{n=1}^{\infty} \frac{10^n}{n!}$$
    <li>$$\sum_{n=1}^{\infty} \frac{n^8}{8^n}$$
-   <li>$$\sum_{n=1}^{\infty} \frac{(2n)!)}{2^n(n!)^2}$$
+   <li>$$\sum_{n=1}^{\infty} \frac{(2n)!}{2^n(n!)^2}$$
    <li>$$\sum_{n=1}^{\infty} n!e^{-6n}$$
    <li>$$\sum_{n=1}^{\infty} \cos\left(\frac{4n^2 + 5}{n^3 + 2}\right)$$
    <li>$$\sum_{n=1}^{\infty} \frac{(n!)^n}{(n^n)^{10}}$$
    <li>$$\sum_{n=1}^{\infty} \left(\frac{10n^{1/n} - 1}{5n^{1/n} - 1}\right)^n$$
-   <li>$$\sum_{n=1}^{\infty} \frac{(3n^{1/3}}{6n^{4/3}+3}$$
+   <li>$$\sum_{n=1}^{\infty} \frac{3n^{1/3}}{6n^{4/3}+3}$$
   </ol>
 
     </div>
