--- a/covid19/covid19_lesson.html
+++ b/covid19/covid19_lesson.html
@@ -23,7 +23,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
   <body style="width:600px; padding-left: 1cm; padding-bottom:10cm" background="bg.jpg">
-
+<P><a href="https://tyler-skorczewski-math.netlify.com/">Dr. Skorczewski homepage</a><br><br>
   <h1>COVID19 Lesson Page </h1>
 
 <hr>
@@ -62,4 +62,7 @@ Jupyter notebook associated with video below: <a href="./covid-derivatives.ipynb
 <br>
 <P>Jupyter notebook associated with video below: <a href="covid-integrate-example-with-SIR.ipynb">covid-integrate-example-with-SIR.ipynb</a>
 <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_odv46va8&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=0_8xvtwq4c" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
+
+<br><br><br>
+copyright Tyler Skorczewski 2020
 </html>
